patterns/high-availability/topology-aware-routing/config-files/busybox-deployment-fis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-demo
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "topology.kubernetes.io/zone"
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: demo
      dnsPolicy: Default # "Default" is not the true default value
      enableServiceLinks: false # Disable service discovery
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: busybox
        image: public.ecr.aws/docker/library/busybox:latest
        command: ["/bin/sh"]
        args:
        - "-c"
        - "echo \"<html><body><h1>PodName:$MY_POD_NAME  NodeName:$MY_NODE_NAME  podIP:$MY_POD_IP</h1></body></html>\" > /tmp/index.html;\nwhile true; do\n  printf 'HTTP/1.1 200 OK\\n\\n%s\\n' $(cat /tmp/index.html) | nc -l -p 8080     \ndone                                  \n"
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
